--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+@import 'remixicon/fonts/remixicon.css';
+
+
+
+body{
+    background-color: oklch(20.992% 0.03416 263.451);
+}
