--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,8 +1,6 @@
 @import "tailwindcss";
-@import 'remixicon/fonts/remixicon.css';
+@import "remixicon/fonts/remixicon.css";
 
-
-
-body{
-    background-color: oklch(20.992% 0.03416 263.451);
+body {
+  background-color: oklch(20.992% 0.03416 263.451);
 }
